Fix dataset path in notebook
Update path to correctly reference Dataset [Original] directory from new notebook location

--- a/Milestone 1/notebooks/milestone1_analysis.ipynb
+++ b/Milestone 1/notebooks/milestone1_analysis.ipynb
@@ -31,9 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-10T22:08:34.921623Z",
+     "start_time": "2025-10-10T22:08:34.917128Z"
+    }
+   },
    "source": [
     "# Data manipulation and analysis\n",
     "import pandas as pd\n",
@@ -65,7 +68,17 @@
     "plt.rcParams['figure.figsize'] = (12, 6)\n",
     "\n",
     "print(\"Libraries imported successfully!\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Libraries imported successfully!\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -76,22 +89,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define paths\n",
-    "DATA_PATH = '../Dataset [Original]/'\n",
-    "\n",
-    "# Load datasets\n",
-    "hotels_df = pd.read_csv(DATA_PATH + 'hotels.csv')\n",
-    "reviews_df = pd.read_csv(DATA_PATH + 'reviews.csv')\n",
-    "users_df = pd.read_csv(DATA_PATH + 'users.csv')\n",
-    "\n",
-    "print(f\"Hotels Dataset Shape: {hotels_df.shape}\")\n",
-    "print(f\"Reviews Dataset Shape: {reviews_df.shape}\")\n",
-    "print(f\"Users Dataset Shape: {users_df.shape}\")"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-10T22:13:34.560905Z",
+     "start_time": "2025-10-10T22:13:34.474738Z"
+    }
+   },
+   "source": "# Define paths\nDATA_PATH = '../../Dataset [Original]/'\n\n# Load datasets\nhotels_df = pd.read_csv(DATA_PATH + 'hotels.csv')\nreviews_df = pd.read_csv(DATA_PATH + 'reviews.csv')\nusers_df = pd.read_csv(DATA_PATH + 'users.csv')\n\nprint(f\"Hotels Dataset Shape: {hotels_df.shape}\")\nprint(f\"Reviews Dataset Shape: {reviews_df.shape}\")\nprint(f\"Users Dataset Shape: {users_df.shape}\")",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotels Dataset Shape: (25, 13)\n",
+      "Reviews Dataset Shape: (50000, 12)\n",
+      "Users Dataset Shape: (2000, 6)\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
