Add Milestone 2 initial setup with dataset and config
- Add Milestone 2 dataset files (hotels, reviews, users, visa)
- Add Neo4j configuration file
- Add project specification PDF
- Update Milestone 1 notebook
- Remove old README

--- a/Milestone 1/Milestone 1.ipynb
+++ b/Milestone 1/Milestone 1.ipynb
@@ -1345,7 +1345,7 @@
         "\n",
         "Using the cleaned and merged dataset, we analyze and visualize the following:\n",
         "\n",
-        "1. **Best City for Each Trave;ler Type**\n",
+        "1. **Best City for Each Traveler Type**\n",
         "   - Identify the city with the highest average review score for each traveler type.\n",
         "\n",
         "2. **Top 3 Countries by Value-for-Money per Age Group**\n",
