--- a/Milestone 3/Milestone 3.ipynb
+++ b/Milestone 3/Milestone 3.ipynb
@@ -5,9 +5,15 @@
    "id": "9a308bad",
    "metadata": {},
    "source": [
-    "## Part 1: Input Preprocessing\n",
-    "\n",
-    "### 1.a Intent Classification"
+    "# Part 1: Input Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9114f19f",
+   "metadata": {},
+   "source": [
+    "## 1.a Intent Classification"
    ]
   },
   {
@@ -70,7 +76,7 @@
    "id": "9f1a3a69",
    "metadata": {},
    "source": [
-    "#### 5 Intent Categories\n",
+    "### 5 Intent Categories\n",
     "\n",
     "| Intent | Purpose | Example |\n",
     "|--------|---------|----------|\n",
@@ -187,7 +193,7 @@
    "id": "7ba5a051",
    "metadata": {},
    "source": [
-    "### 1.b Entity Extraction"
+    "## 1.b Entity Extraction"
    ]
   },
   {
@@ -195,7 +201,7 @@
    "id": "babfd194",
    "metadata": {},
    "source": [
-    "#### Entity Schemas by Intent\n",
+    "### Entity Schemas by Intent\n",
     "\n",
     "| Intent | Entities |\n",
     "|--------|----------|\n",
@@ -435,7 +441,7 @@
    "id": "k50ka3hgk5a",
    "metadata": {},
    "source": [
-    "### 1.c Input Embedding"
+    "## 1.c Input Embedding"
    ]
   },
   {
@@ -497,9 +503,15 @@
    "id": "99960148",
    "metadata": {},
    "source": [
-    "## Part 2: Graph Retrieval\n",
-    "\n",
-    "### 2.a Baseline (Cypher Queries)"
+    "# Part 2: Graph Retrieval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "585946b7",
+   "metadata": {},
+   "source": [
+    "## 2.a Baseline (Cypher Queries)"
    ]
   },
   {
@@ -555,7 +567,7 @@
    "id": "ec2a089d",
    "metadata": {},
    "source": [
-    "#### 14 Query Templates by Intent\n",
+    "### 14 Query Templates by Intent\n",
     "\n",
     "- **LIST_HOTELS**: L1-L5 (5 variants)\n",
     "- **RECOMMEND_HOTEL**: R1, R3-R5 (4 variants, R2 removed)\n",
@@ -1280,7 +1292,7 @@
    "id": "333kn1m0p26",
    "metadata": {},
    "source": [
-    "### 2.b Embeddings-Based Retrieval (RAG)"
+    "## 2.b Embeddings-Based Retrieval (RAG)"
    ]
   },
   {
@@ -1288,7 +1300,7 @@
    "id": "4088obssdrf",
    "metadata": {},
    "source": [
-    "#### Step 1: Extract Hotel + Review Data from Neo4j"
+    "### Step 1: Extract Hotel + Review Data from Neo4j"
    ]
   },
   {
@@ -1417,12 +1429,12 @@
    "id": "3grah2fnshy",
    "metadata": {},
    "source": [
-    "#### Step 2: Generate Natural Review Text"
+    "### Step 2: Generate Natural Review Text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "cpdfiw33eze",
    "metadata": {},
    "outputs": [
@@ -1491,8 +1503,8 @@
     "- Staff: {scores['staff']:.1f}\n",
     "- Value for money: {scores['value']:.1f}\n",
     "\n",
-    "RULES:\n",
-    "1. Write 80-150 words in first person\n",
+    "RULES: 80-150 words in first person\n",
+    "1. Write\n",
     "2. Sound human and conversational (not formal)\n",
     "3. Mention 2-4 aspects naturally (don't list all)\n",
     "4. Convert scores to natural expressions:\n",
@@ -1530,12 +1542,12 @@
    "id": "dq36szqfb1q",
    "metadata": {},
    "source": [
-    "#### Step 3: Generate 1000 Reviews for RAG"
+    "### Step 3: Generate 100 Reviews for RAG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ttr586osu4",
    "metadata": {},
    "outputs": [
@@ -1577,7 +1589,7 @@
    "source": [
     "import time\n",
     "\n",
-    "def generate_reviews_batch(hotel_data_list, target_count=1000, delay=0.3):\n",
+    "def generate_reviews_batch(hotel_data_list, target_count=100, delay=0.3):\n",
     "    reviews = []\n",
     "    \n",
     "    reviews_per_hotel = max(1, target_count // len(hotel_data_list))\n",
@@ -1655,7 +1667,7 @@
    "id": "zqjx9zdo6wm",
    "metadata": {},
    "source": [
-    "#### Quality Check: Review Diversity"
+    "### Quality Check: Review Diversity"
    ]
   },
   {
@@ -1746,7 +1758,7 @@
    "id": "u59jiuflygl",
    "metadata": {},
    "source": [
-    "#### Step 4: Save Reviews"
+    "### Step 4: Save Reviews"
    ]
   },
   {
@@ -1779,7 +1791,7 @@
    "id": "67vuljobnl",
    "metadata": {},
    "source": [
-    "#### Step 5: Verify Review Quality & Diversity"
+    "### Step 5: Verify Review Quality & Diversity"
    ]
   },
   {
@@ -1862,7 +1874,7 @@
    "id": "17hjxbvklbq",
    "metadata": {},
    "source": [
-    "#### Step 6: Create Embeddings with TWO Models"
+    "### Step 6: Create Embeddings with TWO Models"
    ]
   },
   {
@@ -2341,7 +2353,7 @@
    "id": "c9qp9g050le",
    "metadata": {},
    "source": [
-    "#### Step 7: Store in Neo4j Vector Index"
+    "### Step 7: Store in Neo4j Vector Index"
    ]
   },
   {
@@ -2413,7 +2425,7 @@
    "id": "lcpv0u9e6d9",
    "metadata": {},
    "source": [
-    "#### Step 8: Create Vector Indices"
+    "### Step 8: Create Vector Indices"
    ]
   },
   {
@@ -2468,7 +2480,7 @@
    "id": "au105y73bqi",
    "metadata": {},
    "source": [
-    "#### Step 9: Semantic Search Functions (Both Models)"
+    "### Step 9: Semantic Search Functions (Both Models)"
    ]
   },
   {
@@ -2536,7 +2548,7 @@
    "id": "nlgkfmzwq4m",
    "metadata": {},
    "source": [
-    "#### Step 10: Compare Both Embedding Models"
+    "### Step 10: Compare Both Embedding Models"
    ]
   },
   {
