Moved Spaces in 3.A

--- a/Milestone 3/Milestone 3.ipynb
+++ b/Milestone 3/Milestone 3.ipynb
@@ -2453,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "i9dmgxlhypg",
    "metadata": {},
    "outputs": [
@@ -2543,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "tfh4uhfzs1a",
    "metadata": {},
    "outputs": [
@@ -2563,39 +2563,45 @@
     "    def get_prompts(intent: str, query: str, context: str) -> Tuple[str, str]:\n",
     "        \"\"\"Generate system and user prompts.\"\"\"\n",
     "        \n",
-    "        base_system = \"\"\"You are an expert hotel assistant with access to a comprehensive hotel knowledge graph.\n",
+    "        base_system = \"\"\"\n",
+    "        \n",
+    "        You are an expert hotel assistant with access to a comprehensive hotel knowledge graph.\n",
     "\n",
-    "CRITICAL RULES:\n",
-    "1. Answer EXCLUSIVELY using the provided context data\n",
-    "2. NEVER use external knowledge or assumptions\n",
-    "3. If data is insufficient, explicitly state what's missing\n",
-    "4. Be precise, accurate, and cite specific numbers from the context\n",
-    "5. Maintain a professional yet friendly tone\"\"\"\n",
+    "        CRITICAL RULES:\n",
+    "        1. Answer EXCLUSIVELY using the provided context data\n",
+    "        2. NEVER use external knowledge or assumptions\n",
+    "        3. If data is insufficient, explicitly state what's missing\n",
+    "        4. Be precise, accurate, and cite specific numbers from the context\n",
+    "        5. Maintain a professional yet friendly tone\n",
+    "        \n",
+    "        \"\"\"\n",
     "        \n",
     "        if intent == \"LIST_HOTELS\":\n",
-    "            system = base_system + \"\"\"\n",
+    "            system = base_system +\"\"\"\n",
     "\n",
-    "TASK: Present hotels as a clear, scannable list\n",
-    "FORMAT: Numbered list with key details (name, location, rating)\n",
-    "TONE: Concise and helpful\"\"\"\n",
+    "            TASK: Present hotels as a clear, scannable list\n",
+    "            FORMAT: Numbered list with key details (name, location, rating)\n",
+    "            TONE: Concise and helpful\"\"\"\n",
+    "                        \n",
+    "            user = f\"\"\"\n",
     "            \n",
-    "            user = f\"\"\"CONTEXT:\n",
-    "{context}\n",
+    "            CONTEXT:\n",
+    "            {context}\n",
     "\n",
-    "USER QUERY: \"{query}\"\n",
+    "            USER QUERY: \"{query}\"\n",
     "\n",
-    "Provide a clear numbered list of hotels:\"\"\"\n",
+    "            Provide a clear numbered list of hotels:\"\"\"\n",
     "\n",
     "        elif intent == \"RECOMMEND_HOTEL\":\n",
     "            system = base_system + \"\"\"\n",
     "\n",
-    "TASK: Recommend hotels and explain WHY\n",
-    "FORMAT: Top 2-3 recommendations with reasoning\n",
-    "TONE: Persuasive but honest\n",
-    "INCLUDE: Specific scores, review counts, and guest feedback quotes\"\"\"\n",
-    "            \n",
+    "        TASK: Recommend hotels and explain WHY\n",
+    "        FORMAT: Top 2-3 recommendations with reasoning\n",
+    "        TONE: Persuasive but honest\n",
+    "        INCLUDE: Specific scores, review counts, and guest feedback quotes\"\"\"\n",
+    "                    \n",
     "            user = f\"\"\"CONTEXT:\n",
-    "{context}\n",
+    "            {context}\n",
     "\n",
     "USER QUERY: \"{query}\"\n",
     "\n",
