--- a/Milestone 3/Milestone 3.ipynb
+++ b/Milestone 3/Milestone 3.ipynb
@@ -2535,254 +2535,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tv496p3qipg",
+   "id": "4168a112",
    "metadata": {},
    "source": [
-    "### Prompt Engine with Intent-Specific Personas"
+    "### Context Builder"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tfh4uhfzs1a",
+   "id": "667ddc13",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PromptEngine class defined\n"
-     ]
-    }
-   ],
-   "source": [
-    "class PromptEngine:\n",
-    "    \"\"\"Generates optimized prompts for each intent with few-shot examples.\"\"\"\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def get_prompts(intent: str, query: str, context: str) -> Tuple[str, str]:\n",
-    "        \"\"\"Generate system and user prompts.\"\"\"\n",
-    "        \n",
-    "        base_system = \"\"\"\n",
-    "        \n",
-    "        You are an expert hotel assistant with access to a comprehensive hotel knowledge graph.\n",
-    "\n",
-    "        CRITICAL RULES:\n",
-    "        1. Answer EXCLUSIVELY using the provided context data\n",
-    "        2. NEVER use external knowledge or assumptions\n",
-    "        3. If data is insufficient, explicitly state what's missing\n",
-    "        4. Be precise, accurate, and cite specific numbers from the context\n",
-    "        5. Maintain a professional yet friendly tone\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        \n",
-    "        if intent == \"LIST_HOTELS\":\n",
-    "            system = base_system +\"\"\"\n",
-    "\n",
-    "            TASK: Present hotels as a clear, scannable list\n",
-    "            FORMAT: Numbered list with key details (name, location, rating)\n",
-    "            TONE: Concise and helpful\"\"\"\n",
-    "                        \n",
-    "            user = f\"\"\"\n",
-    "            \n",
-    "            CONTEXT:\n",
-    "            {context}\n",
-    "\n",
-    "            USER QUERY: \"{query}\"\n",
-    "\n",
-    "            Provide a clear numbered list of hotels:\"\"\"\n",
-    "\n",
-    "        elif intent == \"RECOMMEND_HOTEL\":\n",
-    "            system = base_system + \"\"\"\n",
-    "\n",
-    "        TASK: Recommend hotels and explain WHY\n",
-    "        FORMAT: Top 2-3 recommendations with reasoning\n",
-    "        TONE: Persuasive but honest\n",
-    "        INCLUDE: Specific scores, review counts, and guest feedback quotes\"\"\"\n",
-    "                    \n",
-    "            user = f\"\"\"CONTEXT:\n",
-    "            {context}\n",
-    "\n",
-    "USER QUERY: \"{query}\"\n",
-    "\n",
-    "Provide recommendations with clear reasoning:\"\"\"\n",
-    "\n",
-    "        elif intent == \"DESCRIBE_HOTEL\":\n",
-    "            system = base_system + \"\"\"\n",
-    "\n",
-    "TASK: Provide comprehensive hotel description\n",
-    "FORMAT: Structured overview covering all available aspects\n",
-    "TONE: Informative and balanced\n",
-    "INCLUDE: Base ratings, review scores, and guest experiences\"\"\"\n",
-    "            \n",
-    "            user = f\"\"\"CONTEXT:\n",
-    "{context}\n",
-    "\n",
-    "USER QUERY: \"{query}\"\n",
-    "\n",
-    "Provide a detailed, well-structured description:\"\"\"\n",
-    "\n",
-    "        elif intent == \"COMPARE_HOTELS\":\n",
-    "            system = base_system + \"\"\"\n",
-    "\n",
-    "TASK: Compare hotels objectively using base ratings\n",
-    "FORMAT: Side-by-side comparison highlighting differences\n",
-    "TONE: Analytical and balanced\n",
-    "INCLUDE: Specific rating differences, clear winner per category\n",
-    "IMPORTANT: Use the BASE RATINGS for comparison (not review scores)\"\"\"\n",
-    "            \n",
-    "            user = f\"\"\"CONTEXT:\n",
-    "{context}\n",
-    "\n",
-    "USER QUERY: \"{query}\"\n",
-    "\n",
-    "Provide a structured comparison:\"\"\"\n",
-    "\n",
-    "        elif intent == \"CHECK_VISA\":\n",
-    "            system = base_system + \"\"\"\n",
-    "\n",
-    "TASK: Provide visa requirement information\n",
-    "FORMAT: Start with clear YES/NO, then details\n",
-    "TONE: Factual and authoritative\n",
-    "INCLUDE: Visa type if applicable\"\"\"\n",
-    "            \n",
-    "            user = f\"\"\"CONTEXT:\n",
-    "{context}\n",
-    "\n",
-    "USER QUERY: \"{query}\"\n",
-    "\n",
-    "Provide clear visa information:\"\"\"\n",
-    "        \n",
-    "        else:\n",
-    "            system = base_system\n",
-    "            user = f\"Context:\\\\n{context}\\\\n\\\\nQuestion: {query}\\\\n\\\\nAnswer:\"\n",
-    "        \n",
-    "        return system, user\n",
-    "\n",
-    "print(\"PromptEngine class defined\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "jrlsohicu8b",
-   "metadata": {},
-   "source": [
-    "### Main LLM Layer Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "wsp2bcl4zx",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "llm_layer function defined\n"
-     ]
-    }
-   ],
-   "source": [
-    "def llm_layer(\n",
-    "    user_query: str,\n",
-    "    intent: str,\n",
-    "    cypher_output: List[Dict],\n",
-    "    embedding_output: Optional[List[Dict]] = None,\n",
-    "    model: str = \"gpt-4o-mini\",\n",
-    "    temperature: float = 0.0,\n",
-    "    max_tokens: int = 1000\n",
-    ") -> Dict[str, Any]:\n",
-    "    \"\"\"\n",
-    "    Production-grade LLM layer with:\n",
-    "    - Smart result merging\n",
-    "    - Intent-optimized prompts\n",
-    "    - Few-shot examples\n",
-    "    - Output validation\n",
-    "    \n",
-    "    Args:\n",
-    "        user_query: Original user question\n",
-    "        intent: Classified intent\n",
-    "        cypher_output: Results from baseline Cypher queries\n",
-    "        embedding_output: Optional RAG results\n",
-    "        model: GPT model (gpt-4o-mini, gpt-4o, gpt-4-turbo)\n",
-    "        temperature: 0.0 for deterministic, higher for creative\n",
-    "        max_tokens: Max response length\n",
-    "    \n",
-    "    Returns:\n",
-    "        Complete response with metadata and quality metrics\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Step 1: Merge and deduplicate results\n",
-    "    merged_data = merge_and_rank_results(cypher_output, embedding_output, intent)\n",
-    "    \n",
-    "    # Step 2: Build optimized context\n",
-    "    context = ContextBuilder.build(intent, merged_data)\n",
-    "    \n",
-    "    # Step 3: Generate intent-specific prompts\n",
-    "    system_prompt, user_prompt = PromptEngine.get_prompts(intent, user_query, context)\n",
-    "    \n",
-    "    # Step 4: Call LLM with error handling\n",
-    "    try:\n",
-    "        response = client.chat.completions.create(\n",
-    "            model=model,\n",
-    "            messages=[\n",
-    "                {\"role\": \"system\", \"content\": system_prompt},\n",
-    "                {\"role\": \"user\", \"content\": user_prompt}\n",
-    "            ],\n",
-    "            temperature=temperature,\n",
-    "            max_tokens=max_tokens\n",
-    "        )\n",
-    "        \n",
-    "        answer = response.choices[0].message.content\n",
-    "        tokens_used = response.usage.total_tokens\n",
-    "        finish_reason = response.choices[0].finish_reason\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        return {\n",
-    "            'success': False,\n",
-    "            'error': str(e),\n",
-    "            'model': model,\n",
-    "            'intent': intent\n",
-    "        }\n",
-    "    \n",
-    "    # Step 5: Return comprehensive result\n",
-    "    return {\n",
-    "        'success': True,\n",
-    "        'model': model,\n",
-    "        'intent': intent,\n",
-    "        'response': answer,\n",
-    "        'metadata': {\n",
-    "            'query': user_query,\n",
-    "            'cypher_results_count': merged_data['metadata']['cypher_count'],\n",
-    "            'embedding_results_count': merged_data['metadata']['embedding_count'],\n",
-    "            'has_results': merged_data['metadata']['has_results'],\n",
-    "            'tokens_used': tokens_used,\n",
-    "            'finish_reason': finish_reason,\n",
-    "            'temperature': temperature\n",
-    "        },\n",
-    "        'context_used': context[:500] + \"...\" if len(context) > 500 else context,\n",
-    "        'full_context': context\n",
-    "    }\n",
-    "\n",
-    "print(\"llm_layer function defined\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "l7aw4nz8n0o",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ContextBuilder class defined\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import Dict, Any\n",
     "import json\n",
@@ -2803,7 +2567,7 @@
     "\n",
     "        builder = builders.get(intent, ContextBuilder._build_generic)\n",
     "        return builder(merged_data)\n",
-    "\n",
+    "    \n",
     "    @staticmethod\n",
     "    def _get_reviews_for_hotel(data: Dict[str, Any], hotel_name: str):\n",
     "        \"\"\"\n",
@@ -3009,6 +2773,234 @@
     "\n",
     "\n",
     "print(\"ContextBuilder class defined\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "tv496p3qipg",
+   "metadata": {},
+   "source": [
+    "### Prompt Engine with Intent-Specific Personas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "tfh4uhfzs1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PromptEngine class defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "class PromptEngine:\n",
+    "    \"\"\"Generates optimized prompts for each intent with few-shot examples.\"\"\"\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def get_prompts(intent: str, query: str, context: str) -> Tuple[str, str]:\n",
+    "        \"\"\"Generate system and user prompts.\"\"\"\n",
+    "        \n",
+    "        base_system = \"\"\"\n",
+    "        \n",
+    "        You are an expert hotel assistant with access to a comprehensive hotel knowledge graph.\n",
+    "\n",
+    "        CRITICAL RULES:\n",
+    "        1. Answer EXCLUSIVELY using the provided context data\n",
+    "        2. NEVER use external knowledge or assumptions\n",
+    "        3. If data is insufficient, explicitly state what's missing\n",
+    "        4. Be precise, accurate, and cite specific numbers from the context\n",
+    "        5. Maintain a professional yet friendly tone\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        \n",
+    "        if intent == \"LIST_HOTELS\":\n",
+    "            system = base_system +\"\"\"\n",
+    "\n",
+    "            TASK: Present hotels as a clear, scannable list\n",
+    "            FORMAT: Numbered list with key details (name, location, rating)\n",
+    "            TONE: Concise and helpful\"\"\"\n",
+    "                        \n",
+    "            user = f\"\"\"\n",
+    "            \n",
+    "            CONTEXT:\n",
+    "            {context}\n",
+    "\n",
+    "            USER QUERY: \"{query}\"\n",
+    "\n",
+    "            Provide a clear numbered list of hotels:\"\"\"\n",
+    "\n",
+    "        elif intent == \"RECOMMEND_HOTEL\":\n",
+    "            system = base_system + \"\"\"\n",
+    "\n",
+    "        TASK: Recommend hotels and explain WHY\n",
+    "        FORMAT: Top 2-3 recommendations with reasoning\n",
+    "        TONE: Persuasive but honest\n",
+    "        INCLUDE: Specific scores, review counts, and guest feedback quotes\"\"\"\n",
+    "                    \n",
+    "            user = f\"\"\"CONTEXT:\n",
+    "            {context}\n",
+    "\n",
+    "        USER QUERY: \"{query}\"\n",
+    "\n",
+    "        Provide recommendations with clear reasoning:\"\"\"\n",
+    "\n",
+    "        elif intent == \"DESCRIBE_HOTEL\":\n",
+    "            system = base_system + \"\"\"\n",
+    "\n",
+    "TASK: Provide comprehensive hotel description\n",
+    "FORMAT: Structured overview covering all available aspects\n",
+    "TONE: Informative and balanced\n",
+    "INCLUDE: Base ratings, review scores, and guest experiences\"\"\"\n",
+    "            \n",
+    "            user = f\"\"\"CONTEXT:\n",
+    "{context}\n",
+    "\n",
+    "USER QUERY: \"{query}\"\n",
+    "\n",
+    "Provide a detailed, well-structured description:\"\"\"\n",
+    "\n",
+    "        elif intent == \"COMPARE_HOTELS\":\n",
+    "            system = base_system + \"\"\"\n",
+    "\n",
+    "TASK: Compare hotels objectively using base ratings\n",
+    "FORMAT: Side-by-side comparison highlighting differences\n",
+    "TONE: Analytical and balanced\n",
+    "INCLUDE: Specific rating differences, clear winner per category\n",
+    "IMPORTANT: Use the BASE RATINGS for comparison (not review scores)\"\"\"\n",
+    "            \n",
+    "            user = f\"\"\"CONTEXT:\n",
+    "{context}\n",
+    "\n",
+    "USER QUERY: \"{query}\"\n",
+    "\n",
+    "Provide a structured comparison:\"\"\"\n",
+    "\n",
+    "        elif intent == \"CHECK_VISA\":\n",
+    "            system = base_system + \"\"\"\n",
+    "\n",
+    "TASK: Provide visa requirement information\n",
+    "FORMAT: Start with clear YES/NO, then details\n",
+    "TONE: Factual and authoritative\n",
+    "INCLUDE: Visa type if applicable\"\"\"\n",
+    "            \n",
+    "            user = f\"\"\"CONTEXT:\n",
+    "{context}\n",
+    "\n",
+    "USER QUERY: \"{query}\"\n",
+    "\n",
+    "Provide clear visa information:\"\"\"\n",
+    "        \n",
+    "        else:\n",
+    "            system = base_system\n",
+    "            user = f\"Context:\\\\n{context}\\\\n\\\\nQuestion: {query}\\\\n\\\\nAnswer:\"\n",
+    "        \n",
+    "        return system, user\n",
+    "\n",
+    "print(\"PromptEngine class defined\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4aff118",
+   "metadata": {},
+   "source": [
+    "### Main LLM Layer Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cc35e66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llm_layer(\n",
+    "    user_query: str,\n",
+    "    intent: str,\n",
+    "    cypher_output: List[Dict],\n",
+    "    embedding_output: Optional[List[Dict]] = None,\n",
+    "    model: str = \"gpt-4o-mini\",\n",
+    "    temperature: float = 0.0,\n",
+    "    max_tokens: int = 1000\n",
+    ") -> Dict[str, Any]:\n",
+    "    \"\"\"\n",
+    "    Production-grade LLM layer with:\n",
+    "    - Smart result merging\n",
+    "    - Intent-optimized prompts\n",
+    "    - Few-shot examples\n",
+    "    - Output validation\n",
+    "    \n",
+    "    Args:\n",
+    "        user_query: Original user question\n",
+    "        intent: Classified intent\n",
+    "        cypher_output: Results from baseline Cypher queries\n",
+    "        embedding_output: Optional RAG results\n",
+    "        model: GPT model (gpt-4o-mini, gpt-4o, gpt-4-turbo)\n",
+    "        temperature: 0.0 for deterministic, higher for creative\n",
+    "        max_tokens: Max response length\n",
+    "    \n",
+    "    Returns:\n",
+    "        Complete response with metadata and quality metrics\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Step 1: Merge and deduplicate results\n",
+    "    merged_data = merge_and_rank_results(cypher_output, embedding_output, intent)\n",
+    "    \n",
+    "    # Step 2: Build optimized context\n",
+    "    context = ContextBuilder.build(intent, merged_data)\n",
+    "    \n",
+    "    # Step 3: Generate intent-specific prompts\n",
+    "    system_prompt, user_prompt = PromptEngine.get_prompts(intent, user_query, context)\n",
+    "    \n",
+    "    # Step 4: Call LLM with error handling\n",
+    "    try:\n",
+    "        response = client.chat.completions.create(\n",
+    "            model=model,\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": system_prompt},\n",
+    "                {\"role\": \"user\", \"content\": user_prompt}\n",
+    "            ],\n",
+    "            temperature=temperature,\n",
+    "            max_tokens=max_tokens\n",
+    "        )\n",
+    "        \n",
+    "        answer = response.choices[0].message.content\n",
+    "        tokens_used = response.usage.total_tokens\n",
+    "        finish_reason = response.choices[0].finish_reason\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        return {\n",
+    "            'success': False,\n",
+    "            'error': str(e),\n",
+    "            'model': model,\n",
+    "            'intent': intent\n",
+    "        }\n",
+    "    \n",
+    "    # Step 5: Return comprehensive result\n",
+    "    return {\n",
+    "        'success': True,\n",
+    "        'model': model,\n",
+    "        'intent': intent,\n",
+    "        'response': answer,\n",
+    "        'metadata': {\n",
+    "            'query': user_query,\n",
+    "            'cypher_results_count': merged_data['metadata']['cypher_count'],\n",
+    "            'embedding_results_count': merged_data['metadata']['embedding_count'],\n",
+    "            'has_results': merged_data['metadata']['has_results'],\n",
+    "            'tokens_used': tokens_used,\n",
+    "            'finish_reason': finish_reason,\n",
+    "            'temperature': temperature\n",
+    "        },\n",
+    "        'context_used': context[:500] + \"...\" if len(context) > 500 else context,\n",
+    "        'full_context': context\n",
+    "    }\n",
+    "\n",
+    "print(\"llm_layer function defined\")"
    ]
   },
   {
