prompt format changes

--- a/Milestone 3/Milestone 3.ipynb
+++ b/Milestone 3/Milestone 3.ipynb
@@ -2822,7 +2822,12 @@
     "            system = base_system +\"\"\"\n",
     "\n",
     "            TASK: Present hotels as a clear, scannable list\n",
-    "            FORMAT: Numbered list with key details (name, location, rating)\n",
+    "            FORMAT:\n",
+    "                For each hotel, present it as a mini card with:\n",
+    "                - A clear numbered title\n",
+    "                - A short one-line summary\n",
+    "                - Key details shown as labeled bullets\n",
+    "                - Use friendly but concise language  \n",
     "            TONE: Concise and helpful\"\"\"\n",
     "                        \n",
     "            user = f\"\"\"\n",
