--- a/Milestone 3/Milestone 3.ipynb
+++ b/Milestone 3/Milestone 3.ipynb
@@ -2842,63 +2842,77 @@
     "        elif intent == \"RECOMMEND_HOTEL\":\n",
     "            system = base_system + \"\"\"\n",
     "\n",
-    "        TASK: Recommend hotels and explain WHY\n",
-    "        FORMAT: Top 2-3 recommendations with reasoning\n",
-    "        TONE: Persuasive but honest\n",
-    "        INCLUDE: Specific scores, review counts, and guest feedback quotes\"\"\"\n",
+    "            TASK: Recommend hotels and explain WHY\n",
+    "            FORMAT:  For each recommended hotel, present it as:\n",
+    "               - A short, clear one-line summary explaining why it is recommended\n",
+    "               - Key details shown as labeled bullet points (location, ratings, notable scores)\n",
+    "               - Use friendly but concise language  \n",
+    "            TONE: Persuasive but honest\n",
+    "            INCLUDE: Specific scores, review counts, and guest feedback quotes\"\"\"\n",
     "                    \n",
     "            user = f\"\"\"CONTEXT:\n",
     "            {context}\n",
     "\n",
-    "        USER QUERY: \"{query}\"\n",
+    "            USER QUERY: \"{query}\"\n",
     "\n",
-    "        Provide recommendations with clear reasoning:\"\"\"\n",
+    "            Provide recommendations with clear reasoning:\"\"\"\n",
     "\n",
     "        elif intent == \"DESCRIBE_HOTEL\":\n",
     "            system = base_system + \"\"\"\n",
     "\n",
-    "TASK: Provide comprehensive hotel description\n",
-    "FORMAT: Structured overview covering all available aspects\n",
-    "TONE: Informative and balanced\n",
-    "INCLUDE: Base ratings, review scores, and guest experiences\"\"\"\n",
+    "           TASK: Provide comprehensive hotel description\n",
+    "           FORMAT: Present the hotel as a clear, structured overview:\n",
+    "                   - Start with a short introductory sentence\n",
+    "                   - Organize information into labeled sections (cleanliness, comfort, facilities, etc.)\n",
+    "                   - Show base ratings and guest review scores distinctly\n",
+    "                   - Include brief guest experience snippets when available\n",
+    "            TONE: Informative , balanced and friendly.\n",
+    "            INCLUDE: Base ratings, review scores, and guest experiences\"\"\"\n",
     "            \n",
     "            user = f\"\"\"CONTEXT:\n",
-    "{context}\n",
+    "            {context}\n",
     "\n",
-    "USER QUERY: \"{query}\"\n",
+    "            USER QUERY: \"{query}\"\n",
     "\n",
-    "Provide a detailed, well-structured description:\"\"\"\n",
+    "            Provide a detailed, well-structured description:\"\"\"\n",
     "\n",
     "        elif intent == \"COMPARE_HOTELS\":\n",
     "            system = base_system + \"\"\"\n",
     "\n",
-    "TASK: Compare hotels objectively using base ratings\n",
-    "FORMAT: Side-by-side comparison highlighting differences\n",
-    "TONE: Analytical and balanced\n",
-    "INCLUDE: Specific rating differences, clear winner per category\n",
-    "IMPORTANT: Use the BASE RATINGS for comparison (not review scores)\"\"\"\n",
+    "            TASK: Compare hotels objectively using base ratings\n",
+    "            FORMAT:  Present a clear side-by-side comparison:\n",
+    "                     - Start with a brief overview of both hotels\n",
+    "                     - Compare each aspect in labeled rows for easy scanning\n",
+    "                     - Highlight rating differences clearly (higher / lower)\n",
+    "                     - Summarize key strengths and weaknesses of each hotel\n",
+    "            TONE: Analytical , balanced and friendly\n",
+    "            INCLUDE: Specific rating differences, clear winner per category\n",
+    "            IMPORTANT: Use the BASE RATINGS for comparison (not review scores)\"\"\"\n",
     "            \n",
     "            user = f\"\"\"CONTEXT:\n",
-    "{context}\n",
+    "            {context}\n",
     "\n",
-    "USER QUERY: \"{query}\"\n",
+    "            USER QUERY: \"{query}\"\n",
     "\n",
-    "Provide a structured comparison:\"\"\"\n",
+    "            Provide a structured comparison:\"\"\"\n",
     "\n",
     "        elif intent == \"CHECK_VISA\":\n",
     "            system = base_system + \"\"\"\n",
     "\n",
-    "TASK: Provide visa requirement information\n",
-    "FORMAT: Start with clear YES/NO, then details\n",
-    "TONE: Factual and authoritative\n",
-    "INCLUDE: Visa type if applicable\"\"\"\n",
+    "            TASK: Provide visa requirement information\n",
+    "            FORMAT:    \n",
+    "                 -Start with a clear YES or NO statement on whether a visa is required\n",
+    "                 - Follow with concise supporting details (countries involved, visa type if available)\n",
+    "                 - Present information in short, clearly labeled lines\n",
+    "          TONE: Factual , concise and friendly.\n",
+    "          INCLUDE: Visa type if applicable\"\"\"\n",
     "            \n",
     "            user = f\"\"\"CONTEXT:\n",
-    "{context}\n",
+    "            {context}\n",
     "\n",
-    "USER QUERY: \"{query}\"\n",
+    "            USER QUERY: \"{query}\"\n",
     "\n",
-    "Provide clear visa information:\"\"\"\n",
+    "            Provide clear visa information:\"\"\"\n",
     "        \n",
     "        else:\n",
     "            system = base_system\n",
